  - The number of files to remember is determined by the 'Maximum
    history list length' setting in Utilities->Global Options->General
  - If you would prefer recent files to open with the caret at the
    beginning, the caret saving feature can be disabled in
    Utilities->Global Options->General.
- x86 assembly syntax highlighting (Kristian Ovaska)

+ Enhancements

- Search and replace changes:
  - Search and replace and HyperSearch dialog boxes merged into one;
    HyperSearch can be enabled by selecting the 'Batch' check box
  - Multiple file search settings are accessable directly from search
    and replace dialog box
  - Batch search results are displayed in a dockable window
  - Batch search can be performed from the search bar, too
  - Batch searches can be aborted in Utilities->I/O Progress Monitor
  - Multiple file search can no longer be done from the search bar
  - Normal searches can no longer be done from the search bar; only
    incremental (and batch) search is supported now
  - The search fileset is now stored in the properties
- Much faster bracket highlighting
- Minor scheme mode updates (Mike Dillon)
- The shell script for starting jEdit created by the installer on Unix
  now starts jEdit using the virtual machine that was used to run the
  installer, and not the system default VM
- Documentation updates:
  - Keyboard shortcut reference

+ Neutral

- find-selection is now bound to C+h instead of C+e C+f

+ Bug Fixes

- HyperSearch.java didn't compile
- CS+LEFT selected the previous paragraph, not the previous word as
  intended
- Disabling the search bar caused problems
- Word wrap would wrap the line of the text was on the wrap column; it
  should've only wrapped it if was beyond the wrap column
- Minor scrolling bugs fixed
- Searching in a directory with no files would throw a
  NullPointerException
- Backspace key didn't work in history text fields on some Java versions

* Version 2.7pre2

+ New Features
