@@ -308,44 +308,3 @@ public class DefaultInputHandler extends InputHandler
 	private Hashtable bindings;
 	private Hashtable currentBindings;
 }
-
-/*
- * ChangeLog:
- * $Log$
- * Revision 1.12  2000/11/26 07:23:57  sp
- * Documentation updates
- *
- * Revision 1.11  2000/11/26 01:43:35  sp
- * x86 assembly mode, various other stuff
- *
- * Revision 1.10  2000/11/17 11:16:04  sp
- * Actions removed, documentation updates, more BeanShell work
- *
- * Revision 1.9  2000/11/16 10:25:17  sp
- * More macro work
- *
- * Revision 1.8  2000/11/16 04:01:11  sp
- * BeanShell macros started
- *
- * Revision 1.7  2000/11/13 11:19:27  sp
- * Search bar reintroduced, more BeanShell stuff
- *
- * Revision 1.6  2000/11/12 05:36:49  sp
- * BeanShell integration started
- *
- * Revision 1.5  2000/09/26 10:19:46  sp
- * Bug fixes, spit and polish
- *
- * Revision 1.4  2000/09/07 04:46:08  sp
- * bug fixes
- *
- * Revision 1.3  2000/09/01 11:31:00  sp
- * Rudimentary 'command line', similar to emacs minibuf
- *
- * Revision 1.2  2000/04/30 07:27:13  sp
- * Ftp VFS hacking, bug fixes
- *
- * Revision 1.1  2000/04/28 09:29:12  sp
- * Key binding handling improved, VFS updates, some other stuff
- *
- */
